# Home_master

./: .env.example  .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
home_master/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  context_processors.py  forms.py  models.py  signals.py  tg_bot.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_product_image.py  0002_category_description_alter_category_image.py  0002_order_additional_images_order_address_and_more.py  0002_order_created_by_client.py  0003_category_image.py  0003_jobapplication_created_by_client.py  0003_product_popularity_alter_category_description_and_more.py  0003_remove_order_full_name_order_first_name_and_more.py  0004_alter_category_name_alter_product_available_and_more.py  0004_order_alter_category_description_and_more.py  0004_remove_order_first_name_orderimage.py  0005_category_available_alter_category_slug_and_more.py  0005_employee_categories_order_product.py  0005_remove_order_main_order_status_3e859e_idx_and_more.py  0006_alter_order_phone.py  0006_category_specializations.py  0007_category_date_created_category_date_updated_and_more.py  0007_employee_products_employee_services.py  0008_order_assigned_employees_order_categories_and_more.py  0008_order_image_alter_order_name.py  0009_remove_order_date_updated_jobapplication.py  0009_specialization_categories.py  0010_employee.py  0011_employee_available.py  (+2 more)
templates/: base.html  footer.html  header.html
users/: admin.py  forms.py  models.py  urls.py  views.py
(+68 files in other folders)
